checker/tests/command-line/issue618/expected.txt
WARNING: Illegal reflective access by org.checkerframework.framework.type.GenericAnnotatedTypeFactory (file:/__w/1/s/checker/dist/checker.jar) to constructor com.sun.tools.javac.tree.JCTree$JCLiteral(com.sun.tools.javac.code.TypeTag,java.lang.Object)
WARNING: Illegal reflective access by org.checkerframework.framework.type.GenericAnnotatedTypeFactory (file:/__w/1/s/checker/dist/checker.jar) to constructor com.sun.tools.javac.tree.JCTree$JCLiteral(com.sun.tools.javac.code.TypeTag,java.lang.Object)
TwoCheckers.java:28: error: [argument.type.incompatible] incompatible argument for parameter b of requiresUntainted.
        requiresUntainted(a);
                          ^
  found   : @Tainted String
  required: @Untainted String
1 error
